[gd_scene load_steps=2 format=3 uid="uid://c2tjm60ff3qtf"]

[ext_resource type="Script" uid="uid://dd48wipe2jwnl" path="res://addons/SolanaSDK/Scenes/keypair_selector.gd" id="1_dj3lu"]

[node name="KeypairSelector" type="HBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 31.0
grow_horizontal = 2
size_flags_horizontal = 3
script = ExtResource("1_dj3lu")

[node name="CheckBox" type="CheckBox" parent="."]
layout_mode = 2
text = "Random"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
editable = false

[node name="Button" type="Button" parent="."]
layout_mode = 2
text = "Select Keypair"

[node name="FileDialog" type="FileDialog" parent="."]
oversampling_override = 1.0
title = "Open a File"
file_mode = 0
filters = PackedStringArray("*.json", "*.tres")

[connection signal="toggled" from="CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
